# qtum-ledger-loader

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4
contrib/: gitian-build-loader.py
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
depends/: README.md  config.site.in
doc/: README_windows.txt
share/: setup.nsi.in
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.qt.include  clientversion.cpp  init.cpp  init.h  qtumledgerinstallerdialog.cpp  qtumledgerinstallerdialog.h  qtumledgertool.h  waitmessagebox.cpp
src/qt/: guiconstants.h  guiutil.cpp  guiutil.h  loader.cpp  loader.h  loader_qtum.qrc  main.cpp  networkstyle.cpp  qtum.qrc  qtumledgerinstallerdialog.cpp  qtumledgerinstallerdialog.h  qtumledgertool.cpp  qtumledgertool.h  qtumversionchecker.cpp  qtumversionchecker.h  styleSheet.cpp  styleSheet.h  utilitydialog.cpp  utilitydialog.h  waitmessagebox.cpp
src/qt/forms/: helpmessagedialog.ui  qtumledgerinstallerdialog.ui
src/qt/res/: loader_qtum-res.rc  qtum-res.rc
src/qt/res/icons/: bitcoin.icns
src/qt/res/ledger/: nanos_app.hex  nanos_app.sha256  nanos_delete.txt  nanos_load.txt  nanos_stake_app.hex  nanos_stake_app.sha256  nanos_stake_delete.txt  nanos_stake_load.txt  nanos_stake_test_app.hex  nanos_stake_test_app.sha256  nanos_stake_test_delete.txt  nanos_stake_test_load.txt  nanos_test_app.hex  nanos_test_app.sha256  nanos_test_delete.txt  nanos_test_load.txt
src/qt/res/styles/theme1/: app.css  config.ini
src/res/: loader_qtum-res.rc
src/util/: strencodings.cpp  strencodings.h  system.cpp  system.h
